# SLU-Inference

./: README.md  download_snips_dataset.py  fluent_speech_inference.py  pyproject.toml  slu_inference.py  snips_inference.py
