[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "datasets>=4.2.0",
    "path>=17.1.1",
    "soundfile>=0.13.1",
    "speechbrain>=1.0.3",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchcodec>=0.8.0",
]

[dependency-groups]
dev = [
    "ipython>=9.6.0",
    "ruff>=0.14.1",
]
